mouse: Don't reset scrolling method on start

Or tap-to-click for that matter, if the device present does
not support it.

https://bugzilla.gnome.org/show_bug.cgi?id=642474